petstore/aks-petstoreservices-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: petstoreservices-gateway
spec:
  gatewayClassName: approuting-istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petstoreservices-routes
spec:
  parentRefs:
    - name: petstoreservices-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /petstorepetservice
      backendRefs:
        - name: aks-petstorepetservice
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /petstoreproductservice
      backendRefs:
        - name: aks-petstoreproductservice
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /petstoreorderservice
      backendRefs:
        - name: aks-petstoreorderservice
          port: 80
